05/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: net2
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080
