05/back_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: back-svc
  namespace: net2
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      name: multitool
      port: 8080
      targetPort: 1180
