05/front_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: front-svc
  namespace: net2
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      name: nginx
      port: 80
      targetPort: 80
